Bug 922082 - Skip display:none options when searching for a match.  r=bz